Fix css overlap problem

--- a/src/assets/responsivegrid.css
+++ b/src/assets/responsivegrid.css
@@ -1,7 +1,7 @@
 /*
     Core styles
 */
-body {
+.body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background: #333;
